--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Case Management System</title>
-  <base href="/cms">
+  <base href="./cms">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.d29178e3889f2196ed61.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.062e62c315dc46aa012c.js"></script><script type="text/javascript" src="es2015-polyfills.01deec5b2033b45aed7c.js" nomodule></script><script type="text/javascript" src="polyfills.481858ef51fe27531859.js"></script><script type="text/javascript" src="scripts.d16a53ecea0d8ff87b57.js"></script><script type="text/javascript" src="main.7addad68bc7ca5a0b8d2.js"></script></body>
+<script type="text/javascript" src="runtime.f3a1f19ff667ad5bb18d.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.d16a53ecea0d8ff87b57.js"></script><script type="text/javascript" src="main.5e1327710d65d7b3a8c9.js"></script></body>
 </html>
